chore: remove old comment, probably no longer relevant